# S1mpleTraderV3

./: .bugtracking-issue125.md  .coverage  .gitattributes  .gitignore  .pylintrc  .st3_tmp_changed_files.txt  .temp_qa_files.json  AGENT_PROMPT.md  CHANGELOG.md  FAILING_TESTS_ANALYSIS.md  README.md  REFACTORING_CHECKLIST.md  REFACTORING_LOG.md  TERMINOLOGY_REVIEW.md  agent.md  agent_NEW.md  analyze_quality.py  check_compliance.py  check_yaml.py  coverage.json  coverage_assessment.txt  create_test.py  deep_report_output.md  find_swot_terms.py  fix_provenance.py  fix_provenance2.py  fix_tests.py  fix_yaml.py  imp_agent.md  mcp_config.yaml  mypy_report.txt  mypy_report_utf8.txt  pylint_aggressive.txt  pylint_aggressive_utf8.txt  pylint_assessment.txt  pylint_expanded_report.txt  pylint_expanded_report_utf8.txt  pylint_full_report.txt  pylint_full_report_utf8.txt  pylint_raw.txt  (+33 more)
.agent/: reboot.md
.agent/workflows/: remediate_managers.md
.copilot/: logging.yaml  session-state.json  session-sub-role.json  sub-role-requirements.yaml
.copilot/sessions/: 1cca3dcb-2f76-4165-b87c-6084eaf3a2d2.json  218721fd-cb69-4b5b-83f1-af63647c16eb.json  4b9c1462-0716-44d3-9462-9f9f230dd1bc.json  9d61a962-3ba2-492f-8071-3d0222921d38.json  d98b7ffc-968a-4393-a1f3-cc6aa0f97d9d.json
.github/: .copilot-instructions.md
.github/agents/: imp.agent.md  qa.agent.md
.github/hooks/: pre-compact.json  session-start.json
.github/prompts/: prepare-handover.prompt.md  prepare-implementation-brief.prompt.md  prepare-qa-brief.prompt.md  request-qa-review.prompt.md  request-review.prompt.md  resume-implementation.prompt.md  resume-work.prompt.md  start-implementation.prompt.md  start-work.prompt.md
.refactor_temp/: project_manager_fixes.md
.st3/: DemoDTO.py  ExampleV2DTO.py  SignalDetectorWorker.py  artifacts.yaml  components.yaml  deliverables.json  git.yaml  issue137-remote-branch-checkout.md  labels.yaml  policies.yaml  project_structure.yaml  projects.json  quality.yaml  scaffold_metadata.yaml  state.json  template_registry.json  template_registry.yaml  workflows.yaml  workphases.yaml
.st3/config/: enforcement.yaml  git.yaml  phase_contracts.yaml  policies.yaml  quality.yaml  workflows.yaml  workflows.yaml.bak  workphases.yaml
.st3/scaffold_review/: ReviewAsyncWorker.py  ReviewEchoTool.py  ReviewGenericComponent.py  ReviewOrderService.py  ReviewSignalDTO.py  ReviewSyncWorker.py  ReviewWorkflowConfig.py
.st3/scaffold_validation/: TestAsyncWorker.py  TestConfig.py  TestDTO.py  TestGeneric.py  TestService.py  TestSyncWorker.py  TestTool.py  test-architecture.md  test-design.md  test-planning.md  test-reference.md  test-research.md  test_example.py  test_example_integration.py
.st3/temp/: commit_c9de43c8.txt  commit_message_1a5c395f.txt  commit_message_38822b40.txt  commit_message_3c9014cb.txt  commit_message_484959da.txt  commit_message_8cd8bda2.txt  commit_message_8f7e57da.txt  commit_message_a466e6ff.txt  commit_message_a8916239.txt  commit_message_ada6b8e7.txt  commit_message_afe2811e.txt  commit_message_cd6fb658.txt  commit_message_d859899e.txt  commit_message_da66d691.txt  commit_message_dd78ad3d.txt  issue_bf98047e.md  pr_e3b2cd83.md
.tmp/: test_flatten.txt
backend/config/: __init__.py
backend/core/: context_factors.py  enums.py  eventbus.py  flow_initiator.py  (+3 more)
dist_new/: simpletraderv3-3.0.0-py3-none-any.whl
docs/: DOCUMENTATION_INVENTORY.md  DOCUMENTATION_MAINTENANCE.md  Hersenspinsel.txt  SESSIE_OVERDRACHT_20251027.md  SESSIE_OVERDRACHT_20251029.md  SESSIE_OVERDRACHT_20251030.md  SESSIE_OVERDRACHT_20260126.md  SESSIE_OVERDRACHT_20260302.md  SESSIE_OVERDRACHT_20260313.md  SESSIE_OVERDRACHT_20260317.md  SESSIE_OVERDRACHT_20260317b.md  SESSIE_OVERDRACHT_20260318_KORT.md  SESSIE_OVERDRACHT_20260323.md  SESSIE_OVERDRACHT_20260405_QA_BLOCKER.md  TODO.md  TODO_DOCUMENTATION.md
locales/: en.yaml
mcp_server/: __main__.py  cli.py  server.py  supervisor.py
proof_of_concepts/: async_event_architecture_poc.py  multiprocess_eventbus_test.py  real_async_poc.py
scripts/: analyze_quality.py  capture_baselines.py
temp/: branch_py_files.txt  fix_template_paths.ps1  migrate_cycle5.ps1  noop18.txt  noop19.txt  noop20.txt  test_results.txt
test/: interface.py  resource.py  schema.py  service.py  tool.py
test_renders/: architecture-template-library-example.md  design-template-composition-example.md  planning-task362-example.md  research-jinja2-composition-example.md
tests/: conftest.py  test_artifacts_yaml_type_field.py  test_design_template_cycle5.py  test_e2e_template_scaffolding_cycle7.py  test_scaffolder_output_path_validation.py  test_template_registry.py  test_tier0_conditional_header.py  test_tier0_template.py  test_tier0_two_line_format.py  test_tier1_document_cycle3.py  test_tier1_templates.py  test_tier2_markdown_cycle4.py  test_tier2_templates.py  test_validation_enforcement_cycle6.py  test_validation_metadata.py  test_version_hash.py
tmp/: cache-optimization-final.md  cache-optimization-strategy.md  cache-optimization-v2.md  caching-strategy-design.md  caching-strategy-final.md  caching-strategy-refactored.md  caching-strategy-v3.md  check-rendering.md  debug_whitespace.py  final-check.md  output_dto.py  regex_test.txt  safe_edit_smoke.txt  test-all-dividers.md  test-dividers.md  test-final.md  test-newline.md  test-rendering.md  test-whitespace.md  test_all_python.py  test_arch_doc.md  test_commit_phases.py  test_comprehensive.py  test_current_state.py  test_design_doc.md  test_file.txt  test_generic_doc.md  test_pr_file.md  test_safe_edit.txt  test_tier01.py  test_tier0_only.py  test_tier0_tier1_code.py  test_tracking_doc.md  test_whitespace.py  test_whitespace2.py  test_worker_clean.py  test_worker_full.py  verify-final.md  verify-newline.md  websocket-architecture-design.md  (+2 more)
(+1466 files in other folders)
